# candle

./: Cargo.toml
candle-core/: Cargo.toml
candle-core/benches/: bench_main.rs
candle-core/benches/benchmarks/: avg_pool2d.rs  index_select.rs  max_pool2d.rs  mod.rs  ones.rs
candle-core/src/: backprop.rs  custom_op.rs  device.rs  display.rs  dummy_webgpu_backend.rs  error.rs  lib.rs  metal_backend.rs  op.rs  storage.rs  tensor.rs  test_utils.rs
candle-core/src/metal_backend/: mod.rs
candle-core/src/quantized/: ggml_file.rs  mod.rs
candle-core/src/webgpu_backend/: device.rs  mod.rs  storage.rs
candle-core/tests/: conv_tests.rs  grad_tests.rs  layout_tests.rs  matmul_tests.rs  pool_tests.rs  quantized_tests.rs  tensor_tests.rs
candle-examples/examples/quantized/: main.rs
candle-kernels/src/: unary.cu
candle-metal-kernels/src/: conv.metal  indexing.metal  layer_norm.metal  lib.rs  tests.rs  unary.metal
candle-nn/benches/: bench_main.rs
candle-nn/benches/benchmarks/: conv.rs  mod.rs
candle-nn/src/: conv.rs  layer_norm.rs
candle-nn/tests/: ops.rs
candle-pyo3/src/: lib.rs
candle-transformers/src/models/: with_tracing.rs
candle-webgpu-kernels/: Cargo.toml
candle-webgpu-kernels/src/: lib.rs
candle-webgpu-kernels/src/ops/: binary.rs  binary.wgsl  cast.rs  cast.wgsl  mod.rs  unary.rs  unary.wgsl
